--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,10 @@
   "manifest_version": 2,
   "name": "new tab",
   "description": "personal new tab",
-  "version": "0.0.0.3",
+  "version": "0.0.0.4",
   "permissions": ["tabs"],
   "minimum_chrome_version": "46",
   "chrome_url_overrides" : {
-    "newtab": "newtab.html"
-  },
-  "content_security_policy": "default-src 'self'; script-src 'self' 'sha256-ZtamxzKgScX5t6QHZQdGzN4TE4oeM9HMQRFDZR8Rr0Q='"
- }
+    "newtab": "index.html"
+  }
+}
